Updated new project wizard and project conversion.
Changed default configuration format to XML.
Fixed #201 (src and bin folder creation).